<resources>
    <string name="app_name">Kalendarz</string>
    <string name="textview">TextView</string>
    <string name="pocz_tek">Początek</string>
    <string name="textview1">TextView</string>
    <string name="koniec">Koniec</string>
    <string name="textview2">TextView</string>
    <string name="liczba_dni_wyjazdu">Liczba dni wyjazdu;</string>
    <string name="oblicz">Oblicz</string>
    <string name="a1" />
    <string name="a2" />
    <string name="c1">-----</string>
</resources>